@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-28T08:16:09Z",
+  "timestamp" : "2024-01-29T01:02:40Z",
   "count_outdated" : 1023,
   "uniques_outdated" : 597,
-  "count" : 1045,
+  "count" : 1046,
   "uniques" : 610,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2024-01-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
