@@ -1,3 +1,12 @@
+2024-01-29T01:02:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7689722463 # 66
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1045
+* notice: next accum: outdated-unq outdated-all / unq all: 597 1023 / 610 1046
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-28]
+
 2024-01-28T08:16:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7684457602 # 64
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
